--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,21 @@
 #canvas {
   width: 720px;
-  height: 480px;
+  aspect-ratio: 3 / 2;
   border: 1px solid #000;
   background-color: black;
 }
+
 
 .overlay {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* slightly darker for clarity */
+  background-color: rgba(0, 0, 0, 0.8); 
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   z-index: 1;
 }
 
@@ -28,7 +30,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* slightly darker for clarity */
+    background-color: rgba(0, 0, 0, 0.8); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,9 +40,7 @@
   #overlay-portrait::before {
     content: "Please rotate your device";
     color: white;
-    font-size: 1.5rem;
-    text-align: center;
-    padding: 1rem;
+
   }
 }
 
